# GravityLAN

./: .dockerignore  .gitignore  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPROVEMENT_SUMMARY.md  LICENSE  MIGRATION_FINAL.md  PROJECT_STATUS.md  README.md  SECURITY.md  SOUL.md  check_docker.py  docker-compose-test.yml  docker-compose.hostnet.yml  docker-compose.macvlan.yml  docker-compose.unraid.yml  docker-compose.yml  fix_host.py  gravitylan-improvements.md  implementation_plan.md  migrate_data.py  migration.json  start_gravitylan.ps1  stop_gravitylan.ps1
backend/: .env  Dockerfile  check_fedo.py  create_discovered_hosts_table.py  fix_db_is_virtual.py  fix_db_nulls.py  fix_db_schema.py  fix_db_virtual_type.py  fix_names.py  fix_settings.py  migrate_agent_tables.py  migrate_monitored_hosts.py  pyproject.toml  requirements.txt  scratch_check_setup.py  scratch_cleanup_unassigned.py  scratch_db_check.py  scratch_test_scan_sync.py  test_deploy_debug.py  test_scan_sync.db
backend/app/: __init__.py  config.py  database.py  exceptions.py  main.py  version.py
backend/data/: gravitylan.db  gravitylan.db-shm  gravitylan.db-wal
backend/homelan_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scratch/: list_settings.py
backend/scripts/: check_db.py  db_utils.py  dump_settings.py  generate_master_token.py  migrate_db.py  migrate_links.py
backend/tests/: conftest.py  test_agent_adoption.py  test_api_tokens.py  test_auth.py  test_basic.py  test_chatbot_api.py  test_scoping.py  (+8 more)
gravitylan_api/: __init__.py  client.py  exceptions.py  pyproject.toml
(+134 files in other folders)
