[project]
name = "gravitylan-api"
version = "0.1.0"
description = "Python Client Library for GravityLAN API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["gravitylan_api*"]
